--- a/Front-end-template/app/src/main/res/values/strings.xml
+++ b/Front-end-template/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="title_food_nearby">Food Nearby</string>
     <string name="title_profile">Profile</string>
     <string name="title_find">Find Meals</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_location"><u>LOCATION: 256 McCaul St.</u></string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
